# 7BUIS027C2-CloudSalaryHub-Group-13

./: .dockerignore  .gitignore  README.md  docker-compose.yml
bff-service/: Dockerfile  pyproject.toml  requests.http
bff-service/app/: config.py  dependencies.py  main.py
bff-service/app/middleware/: auth.py
bff-service/app/routers/: identity.py  salary.py  search.py  stats.py  vote.py
db/: init.sql
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
identity-service/: Dockerfile  pyproject.toml  requests.http
identity-service/app/: config.py  main.py  schemas.py
identity-service/app/routers/: auth.py
identity-service/app/services/: auth_service.py
k8s/: bff-deployment.yaml  bff-service.yaml  configmap.yaml  db-config.yaml  db-init-configmap.yaml  db-secrets.yaml  frontend-deployment.yaml  frontend-service.yaml  identity-deployment.yaml  identity-service.yaml  ingress.yaml  namespace.yaml  nginx-configmap.yaml  postgres-headless-service.yaml  postgres-statefulset.yaml  salary-deployment.yaml  salary-service.yaml  search-deployment.yaml  search-service.yaml  secrets.yaml  stat-deployment.yaml  stat-service.yaml  storageclass.yaml  vote-deployment.yaml  vote-service.yaml
salary-submission-service/: Dockerfile  pyproject.toml  requests.http
scripts/: deploy-local.sh
search-service/: Dockerfile  main.py  pyproject.toml
search-service/app/: main.py  schemas.py
search-service/app/routers/: search.py
search-service/app/services/: search_service.py
shared/: pyproject.toml
shared/src/shared/: config.py  database.py
shared/src/shared/models/: __init__.py  community.py  identity.py  salary.py
src/types/: index.ts
(+39 files in other folders)
