[project]
name = "search-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.132.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "shared",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }
